# OContabil

./: .gitignore  README.md  RELEASE.md  benchmark_statistical.py  pyproject.toml
ContaDocAI/: App.xaml  App.xaml.cs  ContaDocAI.csproj  MainWindow.xaml  MainWindow.xaml.cs
ContaDocAI/Models/: Client.cs  Document.cs
ContaDocAI/Services/: MockDataService.cs
ContaDocAI/Themes/: DarkTheme.xaml
ContaDocAI/ViewModels/: MainViewModel.cs
ContaDocAI/Views/: ClientsView.xaml  ClientsView.xaml.cs  Converters.cs  DashboardView.xaml  DashboardView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs  UploadView.xaml  UploadView.xaml.cs  ValidationView.xaml  ValidationView.xaml.cs
Models/: config.json  tokenizer_config.json
OContabil/: App.xaml  App.xaml.cs  OContabil.csproj
OContabil/Data/: AppDbContext.cs  DbInitializer.cs
OContabil/Models/: ChartOfAccount.cs  Client.cs  Document.cs  User.cs
OContabil/Scripts/: export_onnx.py  export_simple.py  gliner_bridge.py  requirements.txt
OContabil/Services/: AppSettings.cs  AuthService.cs  BrasilApiService.cs  CertificateService.cs  DocumentProcessingQueue.cs  DominioExportService.cs  GlinerOnnxService.cs  GlinerResult.cs  GlinerService.cs  ThemeManager.cs  ToastService.cs  Validators.cs
OContabil/Themes/: DarkTheme.xaml  LightTheme.xaml
OContabil/Views/: ClientsPage.xaml  ClientsPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  DocumentReviewDialog.xaml  DocumentReviewDialog.xaml.cs  DocumentsPage.xaml  (+15 more)
gliner2/: __init__.py  layers.py  model.py  processor.py
tutorial/: 1-classification.md  5-validator.md
(+14 files in other folders)
