[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gliner2", "gliner2.*"]

[tool.setuptools.dynamic]
version = {attr = "gliner2.__version__"}

[project]
name = "gliner2"
readme = "README.md"
requires-python = ">=3.8"

maintainers = [
    {name = "Urchade Zaratiana"},
]

dependencies = [
    "gliner",
    "pydantic>=2.0.0",
]

dynamic = ["version"]